--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Zoph 0.5 Readme
-21 Jan 2006
+Zoph 0.7 Readme
+02 June 2007
 
 1. Introduction
 
@@ -65,8 +65,8 @@ Zoph 0.5 Readme
 
 5. Feedback
    
-   Please send feedback to zoph@nother.net.  Releases can be found at
-   http://zoph.sourceforge.net
+   Please send feedback to zoph@zoph.org.  Releases can be found at
+   http://www.zoph.org
 
 6. Thanks
 
