--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -157,6 +157,7 @@ Zoph stands for <strong>z</strong>oph <strong>o</strong>rganizes <strong>ph</str
 Zoph version %s, released %s.=
 about=
 access level=
+add comment=
 add/edit user=
 address continued=
 address=
